# glow

./: Cargo.toml  LICENSE  Makefile  README.md  app.py  intro.txt  notify.sh  postfix.glsl  prefix.glsl  run.sh  run_nix.sh  standard_16x9.data
shaders/: 002-blue.glsl  2dweirdstufffortwitch.glsl  appoliantwist.glsl  atmosphericscattering.glsl  atomdistort.glsl  atomnoisecircle.glsl  atompulse.glsl  atomsupernova.glsl  balloffire.glsl  bandlimitedsynthesis.glsl  creation.glsl  discostartunnel.glsl  dthstr.glsl  fractalpyramid.glsl  furspace.glsl  galaxy3.glsl  geodesictiling.glsl  intothetechnodome.glsl  latenightcubi.glsl  mesh.glsl  monster.glsl  noiseanimationelectric.glsl  oblivionradar.glsl  octagrams.glsl  phantomstar.glsl  prettyhip.glsl  psychedelicburningwheel.glsl  psychedelicdodecexperiment.glsl  randompsychedelic.glsl  randomsmoothkaleidoscope.glsl  randomsunday.glsl  ribbonassault.glsl  shiningsky.glsl  smoothkaleidoscope2.glsl  snowflakestory.glsl  soundeclipserpm.glsl  spiraldomainmapping.glsl  spiralsurprise.glsl  starleidoscope.glsl  sundayfractals.glsl  (+7 more)
src/: main.rs
wants/: liquidtoy.glsl
