[package]
name = "glow"
version = "0.1.0"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.29"
vulkano-shaders = "0.29"
winit = "0.26"
vulkano-win = "0.29"
bytemuck = "1.9"
png = "0.17"
rustfft = "6"
realfft = "3"
ringbuf = "0.2"
num-complex = "0.4"
jack = "0.10"
dsp = "0.10"
